# profi_pars

./: main.py  pyproject.toml  requirements.txt  test.py
data/: city_params.json
