[tool.poetry]
name = "profi-pars"
version = "0.1.0"
description = ""
authors = ["Kuj1 <the.same.dentist@gmail.com>"]
readme = "README.md"
packages = [{include = "profi_pars"}]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
selenium = "^4.6.0"
undetected-chromedriver = "^3.1.6"
pandas = "^1.5.1"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
